# agentic_sdlc

./: .gitignore  AGENTS.md  CLAUDE.md  NATS_INTEGRATION_SUMMARY.md  NEXT_STEPS.md  README.md  asyncapi.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: mcp-config.json  settings.local.json
.claude/agents/: coder_agent.md  orchestrator_agent.md  project_manager.md  qa_agent.md  requirements_reviewer.md  tech_lead.md
agent-logs/: .gitignore  README.md
config/: AGENTS.md  agent_names.json  targets.yaml  team_memory.json  tool_registry.json  work_history.json
docs/: AGENTS.md  NATS_SETUP.md  agent-memory.md  agent-naming.md  asyncapi.md  dead-code-report.md  devlog.md  nats-architecture.md  orchestrator.md  pm-status.md  qa-audit.md  requirements-compliance.md  technical-debt.md
examples/: nats_example.py
hooks/: pre-commit-defeat-tests
nats-chat/: README.md  package-lock.json  package.json
personas/: business_analyst.md  coder_agent.md  project_manager.md
plans/: AGENTS.md  priorities.md  requirements.md  roadmap.md  subagent-development-strategy.md
scripts/: AGENTS.md  README.md  agent-memory-server.py  agent-status.sh  agent_common.sh  autonomous_agent.sh  coder_agent.sh  dashboard.py  dead_code_analysis.sh  orchestrator-mcp-server.py  orchestrator.py  pm_agent.sh  qa_agent.sh  run_defeat_tests.py  tech_lead.sh
src/: AGENTS.md  __init__.py
tests/: AGENTS.md  __init__.py  test_agent.py  test_defeat_tests.py  test_enums.py  test_handoff.py  test_recurrent_refiner.py  test_task.py  test_team.py  test_team_composer.py
(+154 files in other folders)
